--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.12.0",
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
@@ -25,6 +26,7 @@
     "eslint-config-prettier": "^8.8.0",
     "postcss": "^8.4.21",
     "prettier": "2.8.7",
+    "prisma": "^4.12.0",
     "tailwindcss": "^3.3.1"
   }
 }
