github and google authentication

--- a/.env
+++ b/.env
@@ -5,3 +5,11 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://admin:bryan@cluster0.uhwlp35.mongodb.net/test"
+NEXTAUTH_JWT_SECRET="secret"
+NEXTAUTH_SECRET="secret"
+
+GITHUB_ID=8773caaa13958967bb3a
+GITHUB_SECRET=8abf3c335924813843373a245d5239cfcbe01f47
+
+GOOGLE_CLIENT_ID=120546476657-j90qcld8v8gofdvo47p5r43t9hs6usid.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
