--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.17",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.12.0",
     "@types/bcryptjs": "^2.4.2",
@@ -19,6 +20,7 @@
     "bcryptjs": "^2.4.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "lodash": "^4.17.21",
     "next": "13.2.4",
     "next-auth": "^4.20.1",
     "normalize.css": "^8.0.1",
@@ -26,9 +28,11 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "swr": "^2.1.2",
-    "typescript": "5.0.3"
+    "typescript": "5.0.3",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.192",
     "autoprefixer": "^10.4.14",
     "eslint-config-prettier": "^8.8.0",
     "postcss": "^8.4.21",
